--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
+asgiref==3.10.0
 Django==5.2.7
-gunicorn==20.1.0
-whitenoise==1.4.0
-psycopg2-binary==2.9.6
-python-dotenv==1.0.0
+pillow==11.3.0
+sqlparse==0.5.3
